[gd_scene load_steps=10 format=3 uid="uid://b17b2hgiioy0b"]

[ext_resource type="Texture2D" uid="uid://bgkgauo4be8wi" path="res://Art/Tileset/tileset.png" id="1_6qaio"]
[ext_resource type="Script" path="res://Objects/Droppers/treerockflame.gd" id="2_40drg"]
[ext_resource type="PackedScene" uid="uid://bstpb3ve7sf7y" path="res://Objects/wood_drop.tscn" id="3_x11yn"]
[ext_resource type="AudioStream" uid="uid://0rqvjv5b4u00" path="res://Sound/treedeath.mp3" id="4_xwd0b"]
[ext_resource type="AudioStream" uid="uid://o43cg4joycxl" path="res://Sound/treealive.mp3" id="5_ticex"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_5st81"]
size = Vector2(16, 16)

[sub_resource type="Animation" id="Animation_5foi2"]
length = 0.001

[sub_resource type="Animation" id="Animation_3v53c"]
resource_name = "death"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:skew")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [0.0, 1.56905]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_p0pkb"]
_data = {
"RESET": SubResource("Animation_5foi2"),
"death": SubResource("Animation_3v53c")
}

[node name="Tree" type="Sprite2D"]
scale = Vector2(2, 2)
texture = ExtResource("1_6qaio")
region_enabled = true
region_rect = Rect2(16, 96, 16, 16)
script = ExtResource("2_40drg")
woodstonefire_scene = ExtResource("3_x11yn")
number_of_hits = 3
particle_color = Color(0.439216, 0.215686, 0.0509804, 1)

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 9
collision_mask = 9

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource("RectangleShape2D_5st81")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_p0pkb")
}

[node name="DeathSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource("4_xwd0b")

[node name="AliveSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource("5_ticex")

[node name="CPUParticles2D" type="CPUParticles2D" parent="."]
emitting = false
amount = 3
lifetime = 0.1
explosiveness = 1.0
randomness = 1.0
emission_shape = 1
emission_sphere_radius = 4.0
spread = 180.0
gravity = Vector2(0, 0)
initial_velocity_min = 64.0
initial_velocity_max = 64.0
angle_max = 360.0

[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_animation_player_animation_finished"]
